// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with minimal 1`] = `
<div
  class="matrixContainer"
>
  <div
    class="matrix"
  >
    <div
      class="row"
    >
      <div>
        people
      </div>
      <div>
        <div
          class="item selected"
          title="sulu_security.view"
        >
          <span
            aria-label="su-eye"
            class="su-eye"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.add"
        >
          <span
            aria-label="su-plus-circle"
            class="su-plus-circle"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.edit"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.delete"
        >
          <span
            aria-label="su-trash-alt"
            class="su-trash-alt"
          />
        </div>
        <button
          class="rowButton"
        >
          sulu_admin.deactivate_all
        </button>
      </div>
    </div>
    <div
      class="row"
    >
      <div>
        organizations
      </div>
      <div>
        <div
          class="item selected"
          title="sulu_security.view"
        >
          <span
            aria-label="su-eye"
            class="su-eye"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.add"
        >
          <span
            aria-label="su-plus-circle"
            class="su-plus-circle"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.edit"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.delete"
        >
          <span
            aria-label="su-trash-alt"
            class="su-trash-alt"
          />
        </div>
        <button
          class="rowButton"
        >
          sulu_admin.deactivate_all
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render with subTitle 1`] = `
<div
  class="matrixContainer"
>
  <h3>
    Contact
  </h3>
  <div
    class="matrix"
  >
    <div
      class="row"
    >
      <div>
        people
      </div>
      <div>
        <div
          class="item selected"
          title="sulu_security.view"
        >
          <span
            aria-label="su-eye"
            class="su-eye"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.add"
        >
          <span
            aria-label="su-plus-circle"
            class="su-plus-circle"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.edit"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.delete"
        >
          <span
            aria-label="su-trash-alt"
            class="su-trash-alt"
          />
        </div>
        <button
          class="rowButton"
        >
          sulu_admin.deactivate_all
        </button>
      </div>
    </div>
    <div
      class="row"
    >
      <div>
        organizations
      </div>
      <div>
        <div
          class="item selected"
          title="sulu_security.view"
        >
          <span
            aria-label="su-eye"
            class="su-eye"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.add"
        >
          <span
            aria-label="su-plus-circle"
            class="su-plus-circle"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.edit"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.delete"
        >
          <span
            aria-label="su-trash-alt"
            class="su-trash-alt"
          />
        </div>
        <button
          class="rowButton"
        >
          sulu_admin.deactivate_all
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render with title 1`] = `
<div
  class="matrixContainer"
>
  <h2>
    Contact
  </h2>
  <div
    class="matrix"
  >
    <div
      class="row"
    >
      <div>
        people
      </div>
      <div>
        <div
          class="item selected"
          title="sulu_security.view"
        >
          <span
            aria-label="su-eye"
            class="su-eye"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.add"
        >
          <span
            aria-label="su-plus-circle"
            class="su-plus-circle"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.edit"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.delete"
        >
          <span
            aria-label="su-trash-alt"
            class="su-trash-alt"
          />
        </div>
        <button
          class="rowButton"
        >
          sulu_admin.deactivate_all
        </button>
      </div>
    </div>
    <div
      class="row"
    >
      <div>
        organizations
      </div>
      <div>
        <div
          class="item selected"
          title="sulu_security.view"
        >
          <span
            aria-label="su-eye"
            class="su-eye"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.add"
        >
          <span
            aria-label="su-plus-circle"
            class="su-plus-circle"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.edit"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item selected"
          title="sulu_security.delete"
        >
          <span
            aria-label="su-trash-alt"
            class="su-trash-alt"
          />
        </div>
        <button
          class="rowButton"
        >
          sulu_admin.deactivate_all
        </button>
      </div>
    </div>
  </div>
</div>
`;
